adiconando package privado dotnet nuget list source dotnet nuget add source https://nuget.pkg.github.com/nicacio11/index.json --name github

--- a/MoneyExtension/MoneyExtension.csproj
+++ b/MoneyExtension/MoneyExtension.csproj
@@ -27,4 +27,8 @@
     <None Include="..\Media\download.png" Pack="true" PackagePath="\"></None>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="github-Nic-Extensions" Version="1.0.2" />
+  </ItemGroup>
+
 </Project>
