--- a/NuGet.config
+++ b/NuGet.config
@@ -7,7 +7,7 @@
   <packageSourceCredentials>
 	<github>
 		<add key="Username" value="nicacio11"/>
-		<add key="ClearTextPassword" value="${{secrets.GIT_TOKEN_ADD_NUGET}}" />
+		<add key="ClearTextPassword" value="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" />
 	</github>
   </packageSourceCredentials>
 </configuration>
