--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,9 @@ jobs:
       with:
         dotnet-version: '6.0.x'
     
+    - name: Add Nuget packages
+      run: dotnet nuget add source https://nuget.pkg.github.com/nicacio11/index.json --name github
+      
     - name: Build with dotnet
       run: dotnet build --configuration Release
 
