--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
         dotnet-version: '6.0.x'
     
     - name: Add Nuget packages
-      run: dotnet nuget add source https://nuget.pkg.github.com/nicacio11/index.json --name other -u nicacio11 -p ${{secrets.GIT_TOKEN_ADD_NUGET}} --store-password-inclear-text
+      run: dotnet nuget add source https://nuget.pkg.github.com/nicacio11/index.json -n github -u nicacio11 -p ${{secrets.GIT_TOKEN_ADD_NUGET}} --store-password-inclear-text
 
     - name: Build with dotnet
       run: dotnet build --configuration Release
